# HIGH-PERFORMANCE-DPI-ENGINE

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  fix_dpi.txt  requirements.txt  setup.py  test_dpi.pcap
configs/: nginx.conf  prometheus.yml
deploy/: .dockerignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh
include/: aho_corasick.h  anomaly_detector.h  bounded_queue.h  compat.h  dpi_pipeline.h  flow_tracker.h  http_proxy.h  live_capture.h  lpm_trie.h  packet.h  packet_parser.h  packet_pool.h  packet_source.h  pcap_reader.h  pcap_writer.h  rule_engine.h  sni_extractor.h  timer_wheel.h  types.h
include/capture/: capture.h
include/concurrency/: batch_dispatcher.h  bounded_queue.h  lock_free_queue.h  packet_pool.h  thread_pool.h
include/core/: flow.h  flow_tracker.h  packet.h
include/engine/: engine.h
include/nlohmann/: json.hpp
include/output/: logger.h  stats.h
include/parser/: parser.h
include/utils/: endian.h  logger.h
scripts/: dashboard.py  generate_test_pcap.py
scripts/templates/: index.html  login.html  realtime.html
src/: anomaly_detector.cpp  dpi_pipeline.cpp  flow_tracker.cpp  http_proxy.cpp  live_capture.cpp  main.cpp  mock_engine.cpp  mock_main.cpp  packet_parser.cpp  packet_pool.cpp  pcap_reader.cpp  pcap_writer.cpp  rule_engine.cpp  sni_extractor.cpp  types.cpp
src/capture/: capture.cpp
src/concurrency/: thread_pool.cpp
src/core/: flow.cpp
src/engine/: engine.cpp
src/output/: stats.cpp
src/parser/: parser.cpp
tests/: comprehensive_test.cpp  parser_test.cpp  test_rate_limits.py  test_runner.cpp  test_sanitization.py  test_security.py
